# postpartum_care_center_management_system

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  alembic.ini  auth.py  auth_schema.py  config.py  crud.py  database.py  docker-compose.yaml  init.sql  log_config.yaml  main.py  models.py  mydatabase.db  requirements.txt  reset_increment_seq.sql  start.sh  test.py  utils.py  wx_auth.py
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: d3c8fa699833_support_qy_wx.py  f65f97d621f3_test.py
api/: __init__.py  allocate_room.py  change_room.py  check_in.py  check_out.py  fault_registration.py  get_all_clients.py  get_all_rooms.py  get_baby_nurse.py  get_client_by_room_number.py  get_plan_by_id.py  get_room_by_room_name.py  insert_baby_nurse.py  insert_client.py  manage_plan.py  qy_wechat_callback.py  reminder.py  reserve.py  room.py  update_client.py  update_client_status.py  utils.py  wechat_work_robot_sender.py
api/IMS/: __init__.py  add_product.py  product.py
crud/: __init__.py  crud.py  room.py
db/: __init__.py  get_clients_by_name.py
deploy/: docker-compose.yaml
model/: IMS.py  __init__.py  base.py  client.py  room.py
models/: __init__.py  client_models.py
schedules/: __init__.py  decorator_timer.py
schema/: __init__.py  baby.py  base.py  client.py  plan.py  room.py
src/: lib.rs
tests/: test_insert_client.py
