[package]
name = "cryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.15.0", features = ["extension-module"] }
aes-gcm = "0.9.0"
rand = "0.8.0"

[lib]
name = "cryption"
crate-type = ["cdylib"]
